Display fixups for readability (#73)

--- a/frontend/src/components/ResourceCard/styles.scss
+++ b/frontend/src/components/ResourceCard/styles.scss
@@ -2,7 +2,6 @@
     border: solid rgb(201, 194, 194) 2.5px;
     border-radius: 7px;
     background-color: white;
-    width: 100%;
-    height: 100px;
     padding: 5%;
+    margin:10px;
 } 
